--- a/source/css/_schemes/Pisces/_layout.styl
+++ b/source/css/_schemes/Pisces/_layout.styl
@@ -51,7 +51,7 @@
 }
 
 .content-wrap {
-  background: var(--content-bg-color);
+  background: rgba(32, 63, 240, 0.83);
   border-radius: $border-radius-inner;
   box-shadow: $box-shadow-inner;
   box-sizing: border-box;
